setup a dropdown get's cut off issue

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,1 +1,5 @@
 @import '~@kirbydesign/designsystem/scss/global-styles';
+
+body {
+  background-color: teal;
+}
